[gd_scene load_steps=3 format=2]

[ext_resource path="res://pieces/Piece.gd" type="Script" id=1]
[ext_resource path="res://assets/block.png" type="Texture" id=2]

[node name="J_Piece" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="Block1" type="Node2D" parent="."]
position = Vector2( 8, -24 )
__meta__ = {
"_edit_group_": true
}

[node name="block" type="Sprite" parent="Block1"]
modulate = Color( 0, 0, 1, 1 )
texture = ExtResource( 2 )

[node name="Block2" type="Node2D" parent="."]
position = Vector2( 8, -8 )
__meta__ = {
"_edit_group_": true
}

[node name="block" type="Sprite" parent="Block2"]
modulate = Color( 0, 0, 1, 1 )
texture = ExtResource( 2 )

[node name="Block3" type="Node2D" parent="."]
position = Vector2( 8, 8 )
__meta__ = {
"_edit_group_": true
}

[node name="block" type="Sprite" parent="Block3"]
modulate = Color( 0, 0, 1, 1 )
texture = ExtResource( 2 )

[node name="Block4" type="Node2D" parent="."]
position = Vector2( -8, 8 )
__meta__ = {
"_edit_group_": true
}

[node name="block" type="Sprite" parent="Block4"]
modulate = Color( 0, 0, 1, 1 )
texture = ExtResource( 2 )

